--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screen": "^1.0.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-permissions": "~13.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
