--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,9 +24,8 @@
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screen": "^1.0.1",
-    "react-native-web": "0.17.7",
-    "expo-barcode-scanner": "~11.3.0",
-    "expo-permissions": "~13.2.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
